--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy:s3": "npm run build:prod && aws s3 cp dist/ s3://petclinc-www --recursive"
   },
   "dependencies": {
     "vue": "^2.5.2",
